--- a/car_project/templates/add_car_for_sale.html
+++ b/car_project/templates/add_car_for_sale.html
@@ -41,8 +41,9 @@
         </select><br><br>
 
         <label for="accidental_background">Accidental Background:</label>
-        <input type="radio" name="accidental_background" value="True" required> Yes
-        <input type="radio" name="accidental_background" value="False" required> No<br><br>
+        <div class="radio-group">
+            <label><input type="radio" name="accidental_background" value="True" required> Yes</label>
+                <label><input type="radio" name="accidental_background" value="False" required> No</label></div><br><br>
 
         <label for="description">Description:</label>
         <textarea name="description" rows="4" cols="50"></textarea><br><br>
