--- a/car_project/templates/edit_my_cars.html
+++ b/car_project/templates/edit_my_cars.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar sticky-top bg-body-tertiary">
         <div class="navbar-container">
-            <a href="{% url 'list_of_my_cars_for_rent' %}" class="navbar-link">Back to car list</a>
+            <a href="{% url 'list_of_my_cars' %}" class="navbar-link">Back to car list</a>
         </div>
     </nav>
     <div class="add-edit">
