--- a/car_project/templates/car_detail.html
+++ b/car_project/templates/car_detail.html
@@ -28,6 +28,8 @@
     </style> -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius Sans One">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <nav class="navbar sticky-top bg-body-tertiary">
@@ -58,13 +60,13 @@
         <p>Accidental Background: {{ car.accidental_background|yesno:"Yes,No" }}</p>
         <div class="add-car-button-container">
         <a href="{{ car.user.my_location_link }}" target="_blank">
-            <button>Find Owner Location</button>
+            <button> <i class="fa-solid fa-location-dot"></i> Find Owner Location</button>
         </a>
         <a href="https://wa.me/{{ car.user.Phone }}?text=Hi%20{{ car.user.Name }}%2C%20I'm%20interested%2C%20please%20share%20more%20details%20about%20this%20{{ car.name }}." target="_blank">
-            <button>Chat with WhatsApp</button>
+            <button><i class="fa-brands fa-whatsapp"></i> Chat with WhatsApp</button>
         </a>
         <a href="https://vahan.parivahan.gov.in/vahanservice/vahan/ui/home.html" target="_blank">
-            <button>Verify with mParivahan</button>
+            <button><i class="fa-regular fa-circle-check"></i> Verify with mParivahan</button>
         </a>
     </div></div>
 </div>
