--- a/car_project/templates/list_cars_for_rent.html
+++ b/car_project/templates/list_cars_for_rent.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cars for Rent</title>
-    <style>
+    <!-- <style>
         body {
             text-align: center;
         }
@@ -37,50 +37,59 @@
             margin: 5px;
             padding: 5px;
         }
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius Sans One">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="navbar">
-        {% if user_profile %}
-            <div style="float: right;">
-                <a href="{% url 'view_profile' %}"><h3 style="color: blueviolet;">Username: {{ user_profile.Name }}</h3></a>
-                <a href="{% url 'logout' %}" style="color: red; float: right;">Logout</a>
-            </div>
-        {% endif %}
+    <nav class="navbar sticky-top bg-body-tertiary ">
+        
+        <div class="navbar-container">
+            <form method="GET" action="{% url 'list_cars_for_rent' %}">
+                <input type="text" name="search" placeholder="Search by Car Name" value="{{ request.GET.search }}">
+                <select name="brand">
+                    <option value="">All Brands</option>
+                    {% for brand in brands %}
+                        <option value="{{ brand.name }}" {% if request.GET.brand == brand.name %}selected{% endif %}>{{ brand.name }}</option>
+                    {% endfor %}
+                </select>
+                <select name="oil_type">
+                    <option value="">All Oil Types</option>
+                    {% for oil_type in oil_types %}
+                        <option value="{{ oil_type.oil_type }}" {% if request.GET.oil_type == oil_type.oil_type %}selected{% endif %}>{{ oil_type.oil_type }}</option>
+                    {% endfor %}
+                </select>
+                <select name="price">
+                    <option value="">All Prices</option>
+                    <option value="below_5k" {% if request.GET.price == 'below_5k' %}selected{% endif %}>Below 5k</option>
+                    <option value="5k_to_10k" {% if request.GET.price == '5k_to_10k' %}selected{% endif %}>5K-10k</option>
+                    <option value="above_10k" {% if request.GET.price == 'above_10k' %}selected{% endif %}>Above 10K</option>
+                </select>
+                <button class="filter" type="submit">Filter</button>
+            </form>
+            <div class="user">
+            {% if user_profile %}
+            <a class="navbar-link" href="{% url 'view_profile' %}?next={% url 'list_cars_for_rent' %}"><h3><i class="fa-solid fa-user"></i> {{ user_profile.Name }}</h3></a>
+        {% endif %}</div>
+        
+        <a class="navbar-link" href="{% url 'logout' %}">Logout</a>
     </div>
-    <nav>
-        <form method="GET" action="{% url 'list_cars_for_rent' %}">
-            <input type="text" name="search" placeholder="Search by Car Name" value="{{ request.GET.search }}">
-            <select name="brand">
-                <option value="">All Brands</option>
-                {% for brand in brands %}
-                    <option value="{{ brand.name }}" {% if request.GET.brand == brand.name %}selected{% endif %}>{{ brand.name }}</option>
-                {% endfor %}
-            </select>
-            <select name="oil_type">
-                <option value="">All Oil Types</option>
-                {% for oil_type in oil_types %}
-                    <option value="{{ oil_type.oil_type }}" {% if request.GET.oil_type == oil_type.oil_type %}selected{% endif %}>{{ oil_type.oil_type }}</option>
-                {% endfor %}
-            </select>
-            <select name="price">
-                <option value="">All Prices</option>
-                <option value="below_5k" {% if request.GET.price == 'below_5k' %}selected{% endif %}>Below 5k</option>
-                <option value="5k_to_10k" {% if request.GET.price == '5k_to_10k' %}selected{% endif %}>5K-10k</option>
-                <option value="above_10k" {% if request.GET.price == 'above_10k' %}selected{% endif %}>Above 10K</option>
-            </select>
-            <button type="submit">Filter</button>
-        </form>
-    </nav>
+</nav>
+        
+    
 
     <h1>Cars Available for Rent</h1>
-
+    <div class="add-car-button-container">
+        <a href="{% url 'add_car_for_rent' %}" target="_blank">
+            <button> <i class="fa-solid fa-plus"></i> Add car for rent</button>
+        </a></div>
     {% if cars %}
     <div class="card-container">
         {% for car in cars %}
         <a href="{% url 'rent_car_detail' car.id %}">
             <div class="card">
-                <h3>{{ car.name }}</h3>
+                <h3><div class="carname">{{ car.name }}</div></h3>
                 <p><strong>Brand:</strong> {{ car.brand.name }}</p>
                 {% if car.rent_car_image %}
                     <img src="{{ car.rent_car_image.url }}" alt="image">
@@ -95,9 +104,7 @@
         <p>No cars available for Rent at the moment.</p>
     {% endif %}
     <br><br>
-    <a href="{% url 'add_car_for_rent' %}" target="_blank">
-        <button>Add car for rent</button>
-    </a>
+    
 </body>
 </html>
 
