--- a/car_project/templates/list_cars_for_sale.html
+++ b/car_project/templates/list_cars_for_sale.html
@@ -7,6 +7,8 @@
     <title>Cars Available for Sale</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius Sans One">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     
@@ -52,7 +54,7 @@
             </form>
             
             {% if user_profile %}
-                <a class="navbar-link" href="{% url 'view_profile' %}"><h3>Username: {{ user_profile.Name }}</h3></a>
+                <a class="navbar-link" href="{% url 'view_profile' %}?next={% url 'list_cars_for_sale' %}"><h3><i class="fa-solid fa-user"></i> {{ user_profile.Name }}</h3></a>
             {% endif %}
             
             <a class="navbar-link" href="{% url 'logout' %}">Logout</a>
@@ -61,6 +63,11 @@
     
     <div class="parent">
     <h1>Cars Available for Sale</h1>
+    <div class="add-car-button-container">
+        <a href="{% url 'add_car_for_sale' %}" target="_blank">
+            <button> <i class="fa-solid fa-plus"></i> Add car for sale</button>
+        </a>
+    </div>
 
     <div class="card-container">
         {% if cars %}
@@ -80,11 +87,7 @@
             <p>No cars available for sale at the moment.</p>
         {% endif %}
     </div><br><br>
-    <div class="add-car-button-container">
-    <a href="{% url 'add_car_for_sale' %}" target="_blank">
-        <button>Add car for sale</button>
-    </a>
-</div>
+    
 </div>
 </body>
 </html>
