--- a/car_project/templates/rent_car_detail.html
+++ b/car_project/templates/rent_car_detail.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Detail</title>
-    <style>
+    <!-- <style>
         body {
             text-align: center;
         }
@@ -22,33 +23,45 @@
             height: auto;
         }
        
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Julius Sans One">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-    <div class="container">
+    <nav class="navbar sticky-top bg-body-tertiary">
+        <div class="navbar-container">
+            <a href="{% url 'list_cars_for_rent' %}" class="navbar-link">Back to car list</a>
+        </div>
+    </nav>
+    
         <h1>{{ car.name }}</h1>
+        <div class="details">
+            <div class="container">
         <img src="{{ car.rent_car_image.url }}" alt="Car Image">
         <p><strong>Brand:</strong> {{ car.brand.name }}</p>
         <p><strong>Oil Type:</strong> {{ car.oil_type }}</p>
         <p><strong>Price Per Day:</strong> {{ car.price_per_day }}</p>
         <p><strong>Mileage:</strong> {{ car.mileage }} km/l</p>
         <p><strong>Description:</strong> {{ car.description }}</p>
-        
+        <div class="add-car-button-container">
         <a href="{{ car.user.my_location_link }}" target="_blank">
-            <button>Find Owner Location</button>
+            <button> <i class="fa-solid fa-location-dot"></i> Find Owner Location</button>
         </a>
         <a 
             href="https://wa.me/{{ car.user.Phone }}?text=Hi%20{{ car.user.Name }}%2C%20I'm%20interested%2C%20please%20share%20more%20details%20about%20this%20{{ car.name }}."
             class="whatsapp-button"
             target="_blank">
-            <button>Chat with WhatsApp</button>
+            <button><i class="fa-brands fa-whatsapp"></i> Chat with WhatsApp</button>
         </a>
         <a 
             href="https://vahan.parivahan.gov.in/vahanservice/vahan/ui/home.html" 
             class="mparivahan-button" 
             target="_blank">
-            <button>Verify with mParivahan</button>
+            <button><i class="fa-regular fa-circle-check"></i> Verify with mParivahan</button>
         </a>
+        </div></div>
     </div>
 </body>
 </html>
